# lambdas

./: .gitignore
.github/scripts/: template_check.sh
.github/workflows/: schedule-bonus.yml  schedule.yml
01-lambdas/: 01_pretest.md  02-algo-customization.md  02_algo_customization.md  03_lambda_anatomy.md  04-capture-list.md  04_capture_list.md  05-closure.md  06-mutable.md  06_mutable.md  07-std-function-vs-pointer.md  08-lifetime-issues.md  08_lifetime_issues.md  09-constexpr-lambda.md  10-generic-lambda.md  10_generic_lambda.md  11-templates-vs-lambdas.md  12-recap.md  12_recap.md  13-pretest-answers.md  13_pretest_answers.md  14-homework.md
01-lambdas-en/: 00_intro.md  01_pretest.md  05_closure.md  09_constexpr_lambda.md  13_pretest_answers.md
exercises/: 01_threeWays.cpp  03_area.cpp  04_invoke.cpp  05_dangling.cpp  06_synchronization.cpp  07_sfinae.cpp  CMakeLists.txt  alphabet.cpp  area.cpp  asterisks.cpp  dangling.cpp  invoke.cpp  sfinae.cpp  synchronization.cpp  threeWays.cpp
homework/schedule/: CMakeLists.txt  README.md  main.cpp  schedule.cpp  schedule.hpp
homework/schedule/tests/: tests-bonus.cpp  tests.cpp
html/: index.html
module1/: 01_pretest.md  02_algo_customization.md  03_lambda_anatomy.md  04_capture_list.md  05_closure.md  05_mutable.md  06_std_function_vs_pointer.md  07_own_customizable_algorithms.md  07_std_function_vs_pointer.md  08_lifetime_issues.md  08_own_customizable_algorithms.md  09_lifetime_issues.md  10_constexpr_lambda.md  10_generic_lambda.md  11_generic_lambda.md  11_template_simplification.md  11_templates_vs_lambdas.md  12_recap.md  13_pretest_answers.md  13_recap.md  index.html  test.cpp
